--- a/static/css/output.css
+++ b/static/css/output.css
@@ -225,6 +225,9 @@
   .z-100 {
     z-index: 100;
   }
+  .z-\[50\] {
+    z-index: 50;
+  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -1418,7 +1421,10 @@ section {
 .cta-ghost {
   cursor: pointer;
   border-radius: calc(infinity * 1px);
-  background-color: transparent;
+  background-color: color-mix(in srgb, #fff 5%, transparent);
+  @supports (color: color-mix(in lab, red, red)) {
+    background-color: color-mix(in oklab, var(--color-white) 5%, transparent);
+  }
   padding-inline: 30px;
   padding-block: 13px;
   font-size: 14px;
